--- a/CGPProject/CGPProject.vcxproj
+++ b/CGPProject/CGPProject.vcxproj
@@ -20,13 +20,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="adder_test.cpp" />
-    <ClCompile Include="cgp.c" />
+    <ClCompile Include="cgp_harms.c" />
+    <ClCompile Include="cgp_library_extension.c" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mycgp.cpp" />
     <ClCompile Include="my_fourier.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="cgp.h" />
+    <ClInclude Include="cgp_harms.h" />
     <ClInclude Include="dataSetDeclaration.h" />
     <ClInclude Include="mycgp.h" />
     <ClInclude Include="myhelpers.h" />
