--- a/CGPProject/CGPProject.vcxproj
+++ b/CGPProject/CGPProject.vcxproj
@@ -31,6 +31,7 @@
     <ClInclude Include="cgp_harms.h" />
     <ClInclude Include="mycgp.h" />
     <ClInclude Include="myhelpers.h" />
+    <ClInclude Include="mymatrix.h" />
     <ClInclude Include="my_fourier.h" />
   </ItemGroup>
   <ItemGroup>
