Fixed constructDataset memory errros and refactored fourier class to move some of teh calculations into the forward_FFT function.

--- a/.gitignore
+++ b/.gitignore
@@ -344,3 +344,6 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/CGPProject/newdifficultdataset.txt
+*.png
+/CGPProject/romo
